--- a/lib/avant_utils/locale/pt-BR.yml
+++ b/lib/avant_utils/locale/pt-BR.yml
@@ -4,3 +4,4 @@ pt-BR:
     messages:
       invalid_cnpj: não é um documento válido
       invalid_cpf: não é um documento válido
+      invalid_url: não é um endereço válido
