--- a/lib/avant_utils/locale/pt-BR.yml
+++ b/lib/avant_utils/locale/pt-BR.yml
@@ -9,3 +9,5 @@ pt-BR:
       invalid_cnpj: "não é um documento válido"
       invalid_cpf: "não é um documento válido"
       invalid_url: "não é um endereço válido"
+      invalid_phone: "não é um telefone válido"
+      invalid_email: "não é um e-mail válido"
