--- a/lib/avant_utils/locale/pt-BR.yml
+++ b/lib/avant_utils/locale/pt-BR.yml
@@ -8,8 +8,8 @@ pt-BR:
     messages:
       invalid_cnpj: "não é um documento válido"
       invalid_cpf: "não é um documento válido"
-      invalid_email: "não é um e-mail válido"
-      invalid_license_plate: "não é uma placa válida"
-      invalid_phone: "não é um telefone válido"
+      invalid_email: "não é um endereço válido"
+      invalid_license_plate: "não é válida"
+      invalid_phone: "não é um número válido"
       invalid_url: "não é um endereço válido"
-      invalid_zip: "não é um CEP válido"
+      invalid_zip: "não é válido"
