Adiciona classes com utilitários para exportação de relatórios

--- a/lib/avant_utils/locale/pt-BR.yml
+++ b/lib/avant_utils/locale/pt-BR.yml
@@ -4,6 +4,10 @@ pt-BR:
     good_morning: "Bom dia"
     good_afternoon: "Boa tarde"
     good_night: "Boa noite"
+  labels:
+    today: "Hoje"
+    tomorrow: "Amanhã"
+    yesterday: "Ontem"
   errors:
     messages:
       invalid_cnpj: "não é um documento válido"
